--- a/envoy/envoy.yaml
+++ b/envoy/envoy.yaml
@@ -4,7 +4,7 @@ static_resources:
     address:
       socket_address:
         address: 0.0.0.0
-        port_value: 80
+        port_value: 18000
     filter_chains:
       - filters:
           - name: envoy.filters.network.http_connection_manager
@@ -37,6 +37,8 @@ static_resources:
                             filename: /etc/envoy_wasm_filter.wasm
                         allow_precompiled: true
                 - name: envoy.filters.http.router
+                  typed_config:
+                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
   clusters:
     - name: web_service
@@ -52,10 +54,23 @@ static_resources:
                 socket_address:
                   address: web_service
                   port_value: 5678
-            
+    - name: grpc_service
+      connect_timeout: 1s
+      type: STRICT_DNS
+      http2_protocol_options: {}
+      load_assignment:
+        cluster_name: grpc_service
+        endpoints:
+        - lb_endpoints:
+          - endpoint:
+              address:
+                socket_address:
+                  address: grpc_service
+                  port_value: 4770
+
 admin:
   access_log_path: "/dev/null"
   address:
     socket_address:
       address: 0.0.0.0
-      port_value: 8001
+      port_value: 18001
