Configure cluster name externally

--- a/envoy/Dockerfile.proxy
+++ b/envoy/Dockerfile.proxy
@@ -1,2 +1,2 @@
 FROM envoyproxy/envoy:v1.24-latest
-ENTRYPOINT /usr/local/bin/envoy -c /etc/envoy.yaml -l debug --service-cluster proxy 
+ENTRYPOINT /usr/local/bin/envoy -c /etc/envoy.yaml -l info --service-cluster proxy 
