--- a/k8s/1_grpc_service.yaml
+++ b/k8s/1_grpc_service.yaml
@@ -43,7 +43,8 @@ metadata:
   namespace: greeter
 spec:
   ports:
-  - port: 4770
+  - name: grpc
+    port: 4770
     protocol: TCP
     targetPort: 4770
   selector:
