--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ log = "0.4.17"
 proxy-wasm = "0.2.1"
 prost = "0.11.5"
 prost-types = "0.11.5"
+serde_json = { version="1.0.91", default-features = false, features = ["alloc"]  }
+serde = { version = "1.0.151", default-features = false, features = ["derive"] }
 
 [build-dependencies]
 protoc-bin-vendored = "3.0.0"
