--- a/envoy/envoy.yaml
+++ b/envoy/envoy.yaml
@@ -29,6 +29,12 @@ static_resources:
                     config:
                       name: envoy_wasm_filter
                       root_id: envoy_wasm_filter
+                      configuration:
+                        "@type": type.googleapis.com/google.protobuf.StringValue
+                        value: |
+                          {
+                            "grpc_service": "grpc_service"
+                          }
                       vm_config:
                         vm_id: vm.sentinel.envoy_wasm_filter
                         runtime: envoy.wasm.runtime.v8
@@ -57,7 +63,11 @@ static_resources:
     - name: grpc_service
       connect_timeout: 1s
       type: STRICT_DNS
-      http2_protocol_options: {}
+      typed_extension_protocol_options:
+        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
+          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
+          explicit_http_config:
+            http2_protocol_options: {}
       load_assignment:
         cluster_name: grpc_service
         endpoints:
